--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
     <body>
         <div class="container">
             <div class="box">
-                <h3>Jonéame v3 Beta – Iniciar sesión</h3>
+                <h3>Jonéame v3 Beta</h3>
                 {% if failed %}
                     <div class="warning">
                         Usuario o contraseña incorrectos o no tienes acceso a la beta.
